--- a/nuestrosEstilos.css
+++ b/nuestrosEstilos.css
@@ -1,3 +1,40 @@
 h1{
     color: blueviolet;
+    font-size: 350%;
+}
+body{
+    background-color: blueviolet;
+}
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+label{
+    font-size: 170%;
+}
+input{
+    font-size: 138%;
+}
+.Reglas{
+    float: right;
+    width: 18%;
+    font-size: 180%;
+
+}
+table, tr, td, th{
+
+    float: right;
+
+}
+td{
+    font-size: 120%;
+    text-indent: -30px;
+}
+img{
+    margin-bottom: 2em;
+    margin-top: 2em;
+}
+a{
+    font-size: 180%;
 }
