--- a/pagina1.css
+++ b/pagina1.css
@@ -1,4 +1,46 @@
 body{
     background-color: blueviolet;
+    font-family: sans-serif;
+    margin: 0;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+
+header{
+    display: flex;
+    min-height: 70px;
+    background: #a52be2;
+    justify-content: space-between;
+    align-items: center;/* para centrar */
+    padding: 10px;
+    border: ridge gray;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.logo img{
+    height: 50px;
+    margin-right: 10px;
+}
+.logo h2{
+    font-weight: 600;
+    padding-right: 550px;
+}
+
+nav a{
+    font-weight: 600;
+    padding-right: 10px;
+}
+nav a:hover{
+    color: white;
+}
+@media (max-width: 700px) {
+    header {
+        flex-direction: column;
+        padding: 10px 0px;
+    }
 }
 
