--- a/css/pagina1.css
+++ b/css/pagina1.css
@@ -11,7 +11,8 @@ body {
 h2 {
     color: black;
     font-family: 'Tapestry', cursive;
-    margin: 0 2% 0 2%;
+    margin: 0 2% 0 44%;
+    align-items: center;
 }
 
 header {
@@ -52,4 +53,32 @@ footer {
 
 footer a img {
     width: 60%;
+}
+
+.corazon{
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    transform: rotate(45deg);
+    margin: 10px auto;
+    position: relative;
+    border-radius: 5px;
+}
+.corazon:before, .corazon:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: red;
+    border-radius: 50%;
+}
+
+.corazon:before{
+    top: 0;
+    left: -50%;
+}
+.corazon:after{
+    top: -50%;
+    left: 0;
 }
